@@ -1,3 +1,11 @@
+2000-08-23  Jeff Hobbs  <hobbs@scriptics.com>
+
+	* tests/tlsIO.test (tlsIO-8.1): added a delay on the accept close
+	to make the test work with OpenSSL on Windows (doesn't affect
+	other builds).
+
+	* tls.htm: updated with notes for 1.4.
+
 2000-08-21  Jeff Hobbs  <hobbs@scriptics.com>
 
 	* tests/tlsIO.test: require at least tls1.4 in test suite.
